--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -16,6 +16,7 @@ vello_svg = { path = "../../integrations/vello_svg" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 image = "0.24.5"
+rand = "0.8.5"
 instant = { workspace = true }
 
 # Used for the `download` command
