--- a/crates/encoding/Cargo.toml
+++ b/crates/encoding/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vello_encoding"
-version = "0.1.0"
+version.workspace = true # We mimic Vello's version
 description = "Vello types that represent the data that needs to be rendered."
 edition.workspace = true
 rust-version.workspace = true
