--- a/.github/workflows/web-demo.yml
+++ b/.github/workflows/web-demo.yml
@@ -1,10 +1,3 @@
-env:
-  # We aim to always test with the latest stable Rust toolchain, however we pin to a specific
-  # version like 1.70. Note that we only specify MAJOR.MINOR and not PATCH so that bugfixes still
-  # come automatically. If the version specified here is no longer the latest stable version,
-  # then please feel free to submit a PR that adjusts it along with the potential clippy fixes.
-  RUST_STABLE_VER: "1.76" # In quotes because otherwise (e.g.) 1.70 would be interpreted as 1.7
-
 name: Web Demo Update
 
 on:
@@ -20,9 +13,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: install stable toolchain
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: ${{ env.RUST_STABLE_VER }}
           targets: wasm32-unknown-unknown
 
       - name: install wasm-bindgen
