--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -26,7 +26,7 @@ pollster = { workspace = true }
 wgpu-profiler = { workspace = true }
 
 wgpu = { workspace = true }
-winit = "0.29.11"
+winit = "0.29.12"
 env_logger = "0.11.2"
 log = "0.4.21"
 
@@ -36,15 +36,12 @@ notify-debouncer-mini = "0.3"
 
 
 [target.'cfg(target_os = "android")'.dependencies]
-winit = { version = "0.29.11", features = ["android-native-activity"] }
+winit = { version = "0.29.12", features = ["android-native-activity"] }
 android_logger = "0.13.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
 console_log = "1"
 wasm-bindgen-futures = "0.4.41"
-# Note: pin web-sys to 0.3.67 because wgpu 0.19 depends on that exact version.
-# Update this when revving wgpu. Remove pin when wgpu no longer demands it.
-# See https://github.com/gfx-rs/wgpu/pull/5224 for more info.
-web-sys = { version = "=0.3.67", features = [ "HtmlCollection", "Text" ] }
+web-sys = { version = "0.3.67", features = [ "HtmlCollection", "Text" ] }
 getrandom = { version = "0.2.12", features = ["js"] }
