Make `wgpu-profiler` completely optional
This is useful for depending on git revs of wgpu
(primarily because wgpu's trunk version number isn't 0.19.3 but 0.19.0)

--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -11,19 +11,25 @@ publish = false
 name = "with_winit"
 crate-type = ["cdylib", "lib"]
 
+[features]
+default = ["wgpu-profiler"]
+# Enable the use of wgpu-profiler. This is an optional feature for times when we use a git dependency on
+# wgpu (which means the dependency used in wgpu-profiler would be incompatible)
+wgpu-profiler = ["dep:wgpu-profiler", "vello/wgpu-profiler"]
+
 [[bin]]
 # Stop the PDB collision warning on windows
 name = "with_winit_bin"
 path = "src/main.rs"
 
 [dependencies]
-vello = { path = "../../", features = ["buffer_labels", "wgpu-profiler"] }
+vello = { path = "../../", features = ["buffer_labels"] }
 scenes = { path = "../scenes" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 instant = { workspace = true }
 pollster = { workspace = true }
-wgpu-profiler = { workspace = true }
+wgpu-profiler = { workspace = true, optional = true }
 
 wgpu = { workspace = true }
 winit = "0.29.12"
