--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -17,6 +17,8 @@ clap = { workspace = true, features = ["derive"] }
 image = "0.24.9"
 rand = "0.8.5"
 instant = { workspace = true }
+# for pico_svg
+roxmltree = "0.19"
 
 # Used for the `download` command
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
