--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -38,6 +38,10 @@ wgpu = { workspace = true }
 winit = "0.29.15"
 log = { workspace = true }
 
+# We're still using env-logger, but we want to use tracing spans to allow using
+# tracing_android_trace
+tracing = { version = "0.1.40", features = ["log-always"] }
+
 [target.'cfg(not(target_os = "android"))'.dependencies]
 # We use android_logger on Android
 env_logger = "0.11.3"
@@ -50,6 +54,12 @@ notify-debouncer-mini = "0.3.0"
 [target.'cfg(target_os = "android")'.dependencies]
 winit = { version = "0.29.15", features = ["android-native-activity"] }
 android_logger = "0.13.3"
+tracing_android_trace = { rev = "5e33f8ae777e58372013ac3273387480e40c0b36", git = "https://github.com/DJMcNab/android_trace" }
+tracing-subscriber = { version = "0.3.18", default-features = false, features = [
+    "std",
+    "registry",
+] }
+profiling = { version = "1.0", features = ["profile-with-tracing"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
