--- a/crates/tests/Cargo.toml
+++ b/crates/tests/Cargo.toml
@@ -6,6 +6,9 @@ license.workspace = true
 repository.workspace = true
 publish = false
 
+[lints]
+workspace = true
+
 [dependencies]
 vello = { path = "../.." }
 image = "0.24.9"
