--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -6,6 +6,9 @@ license.workspace = true
 repository.workspace = true
 publish = false
 
+[lints]
+workspace = true
+
 [dependencies]
 vello = { path = "../../" }
 scenes = { path = "../scenes" }
